[mod] 外部JSを_footer.ejsで共通読み込み

--- a/release/single-blog.html
+++ b/release/single-blog.html
@@ -41,12 +41,6 @@
           </dd>
         </dl> -->
         <dl class="form_item">
-          <dt class="form_name">キーワード</dt>
-          <dd class="form_content">
-            <input type="text" name="s" class="form_text">
-          </dd>
-        </dl>
-        <dl class="form_item">
           <dt class="form_name">形式</dt>
           <dd class="form_content">
             <div class="form_check">
@@ -55,6 +49,12 @@
             <div class="form_check">
               <input type="checkbox" name="format" id="formatPic" class="form_check_input" checked><label for="formatPic" class="form_check_label">イラスト</label>
             </div>
+          </dd>
+        </dl>
+        <dl class="form_item">
+          <dt class="form_name">キーワード</dt>
+          <dd class="form_content">
+            <input type="text" name="s" class="form_text">
           </dd>
         </dl>
         <p class="form_actions">
@@ -103,6 +103,11 @@
     <a href="#pagetop" class="controls_item"><img src="" alt="ページの上部にもどる"></a>
     <a href="#searchBox" class="controls_item"><img src="" alt="コンテンツを検索する"></a>
   </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="/assets/js/lib.js"></script>
+<script src="/assets/js/common.js"></script>
+
 
 </body>
 
