[mod] ロゴまわりの調整

--- a/release/archive.html
+++ b/release/archive.html
@@ -19,10 +19,11 @@
 
 
 <header class="header">
-  <div class="logo"><img src="/assets/img/logo.svg" alt="真性エーテル欠乏症" class="logo_img"></div>
+  <div class="logo"><a href="/"><img src="/assets/img/logo.svg" alt="真性エーテル欠乏症" class="logo_img"></a></div>
   <div class="toggleArea">
     <div class="toggleContents">
       <ul class="globalNavigation">
+        <li class="globalNavigation_item"><a href="/" class="globalNavigation_link">Home<span>トップページ</span></a></li>
         <li class="globalNavigation_item"><a href="/fic/" class="globalNavigation_link">Fictions<span>小説</span></a></li>
         <li class="globalNavigation_item"><a href="/pic/" class="globalNavigation_link">Pictures<span>イラスト</span></a></li>
         <li class="globalNavigation_item"><a href="/offline/" class="globalNavigation_link">Offline<span>オフライン情報</span></a></li>
@@ -68,7 +69,6 @@
         <span class="toggleButton_line"></span>
         <span class="toggleButton_line"></span>
       </div>
-      <!-- <img src="/assets/img/icon_settings.svg" alt="" class="toggleButton_icon"> -->
       <div class="toggleButton_text" data-closetext="close"><span>menu</span></div>
     </button><!-- /.toggleButton -->
   </div><!-- /.toggleArea -->
@@ -78,19 +78,18 @@
 
   <main class="main">
 
-    <h1>Fiction<span>小説</span></h1>
+    <h1 class="heading-02">Fiction<span>小説</span></h1>
 
     <ul class="list">
       
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -98,12 +97,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -111,12 +109,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -124,12 +121,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -137,12 +133,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -150,12 +145,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -163,12 +157,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -176,12 +169,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -189,12 +181,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
@@ -202,12 +193,11 @@
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
