--- a/release/archive-blog.html
+++ b/release/archive-blog.html
@@ -19,10 +19,11 @@
 
 
 <header class="header">
-  <div class="logo"><img src="/assets/img/logo.svg" alt="真性エーテル欠乏症" class="logo_img"></div>
+  <div class="logo"><a href="/"><img src="/assets/img/logo.svg" alt="真性エーテル欠乏症" class="logo_img"></a></div>
   <div class="toggleArea">
     <div class="toggleContents">
       <ul class="globalNavigation">
+        <li class="globalNavigation_item"><a href="/" class="globalNavigation_link">Home<span>トップページ</span></a></li>
         <li class="globalNavigation_item"><a href="/fic/" class="globalNavigation_link">Fictions<span>小説</span></a></li>
         <li class="globalNavigation_item"><a href="/pic/" class="globalNavigation_link">Pictures<span>イラスト</span></a></li>
         <li class="globalNavigation_item"><a href="/offline/" class="globalNavigation_link">Offline<span>オフライン情報</span></a></li>
@@ -68,7 +69,6 @@
         <span class="toggleButton_line"></span>
         <span class="toggleButton_line"></span>
       </div>
-      <!-- <img src="/assets/img/icon_settings.svg" alt="" class="toggleButton_icon"> -->
       <div class="toggleButton_text" data-closetext="close"><span>menu</span></div>
     </button><!-- /.toggleButton -->
   </div><!-- /.toggleArea -->
