--- a/release/index.html
+++ b/release/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <link rel="stylesheet" href="/assets/css/common.css">
+  <script src="https://use.fontawesome.com/885b88a09d.js"></script>
 
 </head>
 
@@ -193,7 +194,7 @@
             </dd>
           </dl>
           <p class="form_actions">
-            <input type="submit" name="actionSubmit" value="送信" class="button">
+            <input type="submit" name="actionSubmit" value="問い合わせを送信" class="button">
           </p>
         </form>
       </section>
