--- a/release/single.html
+++ b/release/single.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <link rel="stylesheet" href="/assets/css/common.css">
+  <script src="https://use.fontawesome.com/885b88a09d.js"></script>
 
 </head>
 
