--- a/release/single.html
+++ b/release/single.html
@@ -22,6 +22,14 @@
 <header class="header">
   <div class="logo"><a href="/"><img src="/assets/img/logo.svg" alt="真性エーテル欠乏症" class="logo_img"></a></div>
   <div class="toggleArea">
+    <button class="toggleButton js-toggleMenu">
+      <div class="toggleButton_button">
+        <span class="toggleButton_line"></span>
+        <span class="toggleButton_line"></span>
+        <span class="toggleButton_line"></span>
+      </div>
+      <div class="toggleButton_text" data-closetext="close"><span>menu</span></div>
+    </button><!-- /.toggleButton -->
     <div class="toggleContents">
       <ul class="globalNavigation">
         <li class="globalNavigation_item"><a href="/" class="globalNavigation_link">Home<span>トップページ</span></a></li>
@@ -64,14 +72,6 @@
         </p>
       </form>
     </div><!-- /.toggleContents -->
-    <button class="toggleButton">
-      <div class="toggleButton_button">
-        <span class="toggleButton_line"></span>
-        <span class="toggleButton_line"></span>
-        <span class="toggleButton_line"></span>
-      </div>
-      <div class="toggleButton_text" data-closetext="close"><span>menu</span></div>
-    </button><!-- /.toggleButton -->
   </div><!-- /.toggleArea -->
 </header>
 
@@ -80,24 +80,26 @@
   <main class="main">
 
     <div class="work">
-      <h1>陽炎のうつしび</h1>
-      <p class="work_tag">幸真, 幸村精市, 真田弦一郎</p>
-      <p class="work_series"><a href="#series">エーテル欠乏症</a></p>
-      <div class="work_comment">
-        <p>ここにコメントが入ります。</p>
-      </div>
+      <h1 class="heading-01">もうひとつの午前一時と最後に見た夢</h1>
       <div class="work_content">
-        <p>私は十月たといその承諾隊という事のためが向いますで。いよいよほかを通用方はもっともこの膨脹ありなかもが出るてしまっますがは合点なるまいたと、少々には思っなたたあり。席に云えたのは単に平生をもしたたます。近頃岡田さんに観念否始終発展に折っです道具この個人私か永続をというお活動ででしょらしいますと、そういう今日も私か上流仲間に評しが、張君のことに遅まきの私をすでに今相違となってここ国家が小病気にするように恐らくご馳走の見るますですて、要するにようやく濫用に来ますといるない事で突っついでまし。</p>
+        <p>私は十月たといその承諾隊と「いう事のためが向いますで。いよいよほかを通用方はもっともこの膨脹ありなかもが出るてしまっますがは合点なるまいたと、少々には思っなたたあり。席に云えたのは単に平生をもしたたます。近頃岡田さんに観念否始終発展に折っです道具この個人私か永続をというお活動ででしょらしいますと、そういう今日も私か上流仲間に評しが、張君のことに遅まきの私をすでに今相違となってここ国家が小病気にするように恐らくご馳走の見るますですて、要するにようやく濫用に来ますといるない事で突っついでまし。</p>
         <p>または否お高圧にしのはそう夢中とするですが、この兄をも済ましうからという中学に違えがいるたまし。そのため外国の頃その書もいずれ中にしありかと三宅さんに買い占めるなで、個性の晩ざるとともにお勉強たたなが、百姓のためが自分にほかなどの当座を十月していて、当然の時分を通っばその上がいよいよ死んうないとなりない気べきて、旨くでなからさっそく実巡査申したのだろたです。</p>
         <p>また弟か窮屈か発展をしたて、今中本領が知れてやろまし時にご意味の毎日をなりたあり。直接をははたして思わてなるたなでですが、ちょうど何だかしけれども発展もどう著なのた。するとお経験をいうてはいでしょ訳なかろて、片仮名にも、ざっと何か眺めるので足りられますなら云っれですたととどまらて、国家も出来ているんう。とうてい何だかもいくら価値についていですば、こっちには昨日中しもそれのご誘惑は好い帰る来ますな。これははたして誘惑ののにご脱却もなっからおらですありなないて、何二の支をそう積んましといったぼんやりならて、またその頭の途でなっれて、みんなかがそれの否を開始で出てならんのんますと意味起らて修養及ぼすおきなかっです。</p>
         <p>男があるいは嘉納さんにただどう伴うたのますたない。岡田君も多少間際が引越して廻らべき方たますあっ。</p>
         <p>（もしくは道具が云えためですならたてですも引張りですたて、）そうまかり出で外国で、Englandの説まで加えるてするという、教場の［＃「も今日のためまで思い聴くのにするんて濫用順いでならたというお人格たのでしょ。</p>
-        <p>何はすでに薬缶に行くるようにしてやりましのんばしかもそう松山文学しやで。またすぐ二日も自分が出て、場合に極めて解りありだとしと、怪しいなたてところがご講義があるませです。一条の場合に、ある農家に先刻ができだけ、十月中にそれほどほか一一十人にいうまでのペに、おれかなさいです相違のしう前は同時に思わられるものたて、とにかく実際頭がないば、そんなのになり方に夢中ないないしですで。ただついに次第幾三一年に考えまではいべくって立派ない見当が思い切って、利益にこのためこういう中をありのでいたのた。</p>
+        <p>「何はすでに薬缶に行くるようにしてやりましのんばしかもそう松山文学しやで。またすぐ二日も自分が出て、場合に極めて解りありだとしと、怪しいなたてところがご講義があるませです。一条の場合に、ある農家に先刻ができだけ、十月中にそれほどほか一一十人にいうまでのペに、おれかなさいです相違のしう前は同時に思わられるものたて、とにかく実際頭がないば、そんなのになり方に夢中ないないしですで。ただついに次第幾三一年に考えまではいべくって立派ない見当が思い切って、利益にこのためこういう中をありのでいたのた。</p>
+      </div>
+      <div class="work_desc">
+        <p class="work_tag">幸真, 幸村精市, 真田弦一郎</p>
+        <p class="work_series"><a href="#series">エーテル欠乏症</a></p>
+        <div class="work_comment">
+          <p>ここにコメントが入ります。</p>
+        </div>
       </div>
       <p class="work_date">2017.01.10</p>
     </div>
 
-    <section id="series">
+    <!-- <section id="series">
       <h2>エーテル欠乏症</h2>
       <ul class="workList">
         <li class="workList_item"><a href="" class="workList_link">
@@ -129,29 +131,30 @@
           </div>
         </a></li>
       </ul>
-    </section>
+    </section> -->
 
-    <div class="navigation">
+    <div class="navigation-single">
       <a href="" class="navigation_item">小説一覧を見る</a>
       <a href="" class="navigation_item">イラスト一覧を見る</a>
     </div>
 
   </main>
 
-  <div class="controls">
-    <a href="#pagetop" class="controls_item"><img src="" alt="ページの上部にもどる"></a>
-    <a href="#searchBox" class="controls_item"><img src="" alt="コンテンツを検索する"></a>
-    <a href="#changeFontSize" class="controls_item"><img src="" alt="文字サイズを変更する"></a>
-  </div>
+<div class="controls" data-itemcount="3">
+  <button class="controls_item controls_button js-toggleMenu"><i class="fa  fa-ellipsis-h" aria-hidden="true"></i></button>
+  <a href="#pagetop" class="controls_item"><i class="fa fa-angle-double-up" aria-hidden="true"></i><span>ページの上部にもどる</span></a>
+  <a href="#changeFontSize" class="controls_item js-changeFontSize"><i class="fa fa-font" aria-hidden="true"></i><span>フォントサイズを変更する</span></a>
+  <a href="#searchBox" class="controls_item"><i class="fa fa-search" aria-hidden="true"></i><span>コンテンツを検索する</span></a>
+</div>
 
-  <div class="changeFontSize" id="#changeFontSize">
-    <span class="changeFontSize_heading">文字サイズ変更</span>
-    <ul class="changeFontSize_set">
-      <li class="changeFontSize_item"><button class="changeFontSize_button">大</button></li>
-      <li class="changeFontSize_item"><button class="changeFontSize_button">中</button></li>
-      <li class="changeFontSize_item"><button class="changeFontSize_button">小</button></li>
-    </ul>
-  </div>
+<div class="changeFontSize" id="changeFontSize">
+  <p class="changeFontSize_heading">文字サイズ変更</p>
+  <ul class="changeFontSize_set">
+    <li class="changeFontSize_item"><button class="changeFontSize_button button">大</button></li>
+    <li class="changeFontSize_item"><button class="changeFontSize_button button">中</button></li>
+    <li class="changeFontSize_item"><button class="changeFontSize_button button">小</button></li>
+  </ul>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="/assets/js/lib.js"></script>
